add /passwords command to bot

--- a/bot/config.test.ini
+++ b/bot/config.test.ini
@@ -8,3 +8,4 @@ token = BOT_TOKEN
 portfolio_url = Your portfolio WebApp url
 random_url = Your random generator WebApp url
 gpt_url = Your ChatGPT WebApp url
+passwords_url = Your Passwords WebApp url
